@@ -2,6 +2,11 @@ Noteworthy changes in version CVS-HEAD
 ------------------------------------------------
 
 
+ * Interface changes relative to the 0.4.1 release:
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ksba_cms_identify       NEW
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 Noteworthy changes in version 0.4.1 (2002-05-03)
 ------------------------------------------------
 
